<resources>
    <string name="app_name">Lunchbox Partner</string>
    <string name="terms_amp_condition"><![CDATA[terms & condition]]></string>
    <string name="owner_name">Owner Name</string>
    <string name="hostel_name">Hostel Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_partner">PartnerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
