<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <!--        <ImageView-->
        <!--            android:id="@+id/imageView2"-->
        <!--            android:layout_width="80dp"-->
        <!--            android:layout_height="80dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:src="@drawable/mainlogo" />-->


        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:gravity="center"-->
        <!--android:text="Sign Up"-->
        <!--android:textColor="@color/BG"-->
        <!--android:textSize="30dp" />-->

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/owner_name"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/hostelname"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/hostel_name"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="300dp"
                android:layout_height="50dp"

                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:digits="0123456789"
                android:drawablePadding="6dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>


<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:cardCornerRadius="20dp">-->

<!--            <Spinner-->
<!--                android:id="@+id/sBloodGroup"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:prompt="@string/discuss_about_header" />-->
<!--        </androidx.cardview.widget.CardView>-->


<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:cardCornerRadius="20dp">-->

<!--            <TextView-->
<!--                android:id="@+id/location"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@color/Whitebright"-->
<!--                android:hint=""-->
<!--                android:drawablePadding="6dp"-->
<!--                android:ems="10"-->
<!--                android:paddingLeft="20dp"-->
<!--                android:textColor="@color/BG"-->
<!--                android:textSize="18sp" />-->


<!--            &lt;!&ndash;<Spinner&ndash;&gt;-->
<!--            &lt;!&ndash;android:id="@+id/sCity"&ndash;&gt;-->
<!--            &lt;!&ndash;android:layout_width="300dp"&ndash;&gt;-->
<!--            &lt;!&ndash;android:layout_height="50dp"&ndash;&gt;-->
<!--            &lt;!&ndash;android:prompt="@string/discuss_about_header" />&ndash;&gt;-->
<!--        </androidx.cardview.widget.CardView>-->


<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginTop="20dp"-->
<!--            app:cardCornerRadius="20dp">-->


<!--            <Spinner-->
<!--                android:id="@+id/sGender"-->
<!--                android:layout_width="300dp"-->
<!--                android:layout_height="50dp"-->
<!--               />-->
<!--        </androidx.cardview.widget.CardView>-->


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:drawablePadding="6dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/etVerifyPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/Whitebright"
                android:drawablePadding="6dp"
                android:hint=" Confirm Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:textColor="@color/BG"
                android:textColorHint="@color/BG"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/BG"
            android:text="@string/terms_amp_condition"
            android:textColor="@color/BG" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp">

            <!--<Button-->
            <!--android:id="@+id/buttonSignUp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="center"-->
            <!--android:background="@color/Form"-->
            <!--android:gravity="center"-->
            <!--android:text="Sign Up"-->
            <!--android:textColor="@color/Whitebright" />-->

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/Form"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="@color/Whitebright" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="Have Account?Login"
            android:textColor="@color/BG"
            android:textSize="14sp"

            />
    </LinearLayout>



</ScrollView>